# infotecs

./: CMakeLists.txt  README.md  README_RU.md
Part 1/: CMakeLists.txt
Part 1/app/: CMakeLists.txt  main.cpp
Part 1/include/logger/: ILogger.h  Logger.h  LoggerFile.h  LoggerSocket.h
Part 1/src/: CMakeLists.txt  Logger.cpp  LoggerFile.cpp  LoggerSocket.cpp
app/: CMakeLists.txt  main.cpp
logger/: CMakeLists.txt
logger/include/logger/: ILogger.h  LoggerFile.h
logger/src/: LoggerFile.cpp
tests/: CMakeLists.txt  test_logger.cpp
